# Datalake-Datastudio

./: .env-example  README.md  pyproject.toml
app/: api.py  config.py  main.py
app/api/: app.py  hadoop.py  nifi.py
app/api/v1/: data.py  routes.py
app/controllers/: hadoop.py  kafka.py  nifi.py
app/database/: queries.py
app/models/: connection.py  dataset.py
app/models/connector/: sql_server.py
app/ui/: ui.py
app/ui/helpers/: helper.py
app/ui/styles/: connections.css  data_explorer.css  home.css
app/ui/utils/: connect_source.py  connections.py  data_explorer.py  delta_storage.py  home.py
app/views/: ui.py
app/views/helpers/: helper.py
app/views/styles/: connect_source.css  connections.css  data_explorer.css  data_sources.css
app/views/ui_pages/: connect_source.py  connections.py  data_explorer.py  data_sources.py  delta_storage.py  home.py
scripts/: database.py
