[project]
name = "TechHub_Data_Studio"
version = "0.1.0"
description = ""
authors = [
    {name = "Sajid Osman",email = "sajid.osman@savethechildren.org"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "structlog (>=25.2.0,<26.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "pyhdfs (>=0.3.1,<0.4.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "clickhouse-connect (>=0.8.17,<0.9.0)",
    "asgi-correlation-id (>=4.3.4,<5.0.0)"
]

[tool.poetry]
packages = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
